load-more button added

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,13 @@
         name="search-query"
         placeholder="Search images..."
       />
-      <button type="submit" class="search-btn">Search</button>
+      <button type="submit" class="btn search-btn">Search</button>
     </form>
 
-    <div class="loader hidden"></div>
-
     <div class="gallery"></div>
+    <button class="btn load-more hidden">Load more</button>
+
+    <div class="loader hidden"></div>
 
     <script type="module" src="./main.js"></script>
   </body>
